# cr_registry_module

./: CMakeLists.txt  README.md
.exvim.projects/: update-filelist.sh  update-idutils.sh  update-inherits.sh  update-symbols.sh  update-tags.sh
inc/: CrImgCap.h  CrReg.h
src/: CrImgCap.cpp  CrReg.cpp
test/: CMakeLists.txt  a_test.cpp  img_cap_tc.cpp  img_capture.cpp  loader_tc.cpp  reg_db_tc.cpp  reg_tc.cpp
